# StockAnalyzer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-installers.yml
packaging/deb/DEBIAN/: control
packaging/deb/usr/share/applications/: stockanalyzer.desktop
packaging/windows/: installer.nsi
stockanalyzer/: __init__.py  backtest.py  cli.py  data.py  engine.py  indicators.py  risk.py  updater.py
stockanalyzer/gui/: main_window.py  worker.py
tests/: conftest.py  test_backtest.py  test_cli.py  test_data_fetch.py  test_data_search.py  test_data_timeframes.py  test_engine.py  test_gui_main_window.py  test_indicators.py  test_risk.py  test_updater.py  test_version.py
