[project]
name = "stockanalyzer"
dynamic = ["version"]
description = "Rule-based trend confirmation engine for OHLCV data, with a Qt6 GUI"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.40",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
stockanalyzer-gui = "stockanalyzer.gui:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stockanalyzer*"]

[tool.setuptools.dynamic]
version = { file = "version.txt" }
